<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_ILLUMINATION" Id="{118ef3b3-a4ab-4518-a550-c85e239a9c3e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Motor axes
	stILMXMotor : DUT_MotionStage;
	stILMYMotor : DUT_MotionStage;
	stILMZMotor : DUT_MotionStage;
							
	// Define axis states for each axis. These are fed to a FB_PositionState manager for each axis
	// X axis position states
	stILMXPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);

	// Y axis position states
	stILMYPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
											
	// Z axis position states						
	stILMZPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>