<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_OBJECTIVES" Id="{e102570a-198c-4e35-93e1-0893aecdf0c8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Motor axes
	stOBJXMotor : DUT_MotionStage;
	stOBJYMotor : DUT_MotionStage;
	stOBJZMotor : DUT_MotionStage;
							
	// Define axis states for each axis. These are fed to a FB_PositionState manager for each axis
	// X axis position states
	stOBJXPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);

	// Y axis position states
	stOBJYPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := -50.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
											
	// Z axis position states						
	stOBJZPosPark : DUT_PositionState :=		(sName:= 'PARK',
										 	fPosition := -25.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>