<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="PRG_TST" Id="{3f76d8be-3e41-4f55-8754-d622cb9b3f24}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_TST
VAR
	fbDPAssemblyManager : FB_AssemblyPositionStatemanager;
	
	// Array of axes for protection FB
	arrDPAxes : ARRAY [1..3] OF DUT_MotionStage := [stDPXMotor, stDPYMotor, stDPZMotor];
	
	arrDPXStates : ARRAY [1..3] OF DUT_PositionState := [stDPXPosPark, stDPXPosCenter,
														 stDPXPosKnife];
	
	arrDPYStates : ARRAY [1..8] OF DUT_PositionState := [stDPYPosPark, stDPYPosCenter,
														 stDPYPosPinhole, stDPYPosDiode,
														 stDPYPosYag1, stDPYPosYag2,
														 stDPYPosYag3, stDPYPosKnife];
																  
	arrDPZStates : ARRAY [1..2] OF DUT_PositionState := [stDPZPosPark, stDPZPosCenter];

	// use largest number of axis states for number of columns
	arrDPAxisStates : ARRAY [1..3, 1..8] OF DUT_PositionState;
	
									
	//  Setup diagnostic paddle adjacency matrix
	arrDPTransitions : ARRAY [0..9, 1..9] OF BOOL := 	
    //Park   Up     Center Pinh.  Diode  Yag1   Yag2   Yag3   Knife
	[FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, // Unknown
	 TRUE,  TRUE,  FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, // Park
	 TRUE,  TRUE,  TRUE,  FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, // Up
	 TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Center
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Pinhole
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Diode
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Yag1
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Yag2
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  // Yag3
	 FALSE, FALSE, TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE,  TRUE]; // Knife	
	 
	// Setup diagnostic paddle output matrix
	arrDPOutputs		: ARRAY [1..9, 1..3] OF DUT_PositionState :=
	//X axis		    Y axis			    Z axis		         Assembly state
	[stDPXPosPark,		stDPYPosPark,		stDPZPosPark,	  // Park
	 stDPXPosPark, 		stDPYPosCenter,		stDPZPosPark, 	  // Up
	 stDPXPosCenter, 	stDPYPosCenter,		stDPZPosCenter,   // Center
	 stDPXPosCenter, 	stDPYPosPinhole,	stDPZPosCenter,   // Pinhole
	 stDPXPosCenter,	stDPYPosDiode,		stDPZPosCenter,   // Diode
	 stDPXPosCenter,	stDPYPosYag1,		stDPZPosCenter,   // Yag1
	 stDPXPosCenter,	stDPYPosYag2,		stDPZPosCenter,   // Yag2
	 stDPXPosCenter,	stDPYPosYag3,		stDPZPosCenter,   // Yag3
	 stDPXPosCenter,	stDPYPosKnife,		stDPZPosCenter];  // Knife
	
	arrDPStates			: ARRAY[0..9] OF STRING := ['UNKNOWN', 'PARK', 'UP', 'CENTER', 
													'PINHOLE', 'DIODE', 'YAG1', 'YAG2', 
													'YAG3',	'KNIFE'];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
fbDPAssemblyManager(arrOutputs:=arrDPOutputs,
					arrTransitions:=arrDPTransitions,
					arrAxisStates:=arrDPAxisStates,
					arrAxes:=arrDPAxes,
					arrAssemblyStates:=arrDPStates);]]></ST>
    </Implementation>
    <LineIds Name="PRG_TST">
      <LineId Id="6" Count="2" />
      <LineId Id="11" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="61" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>