<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="PRG_DiagnosticPaddleMotors" Id="{698f952c-e0c1-49b9-9654-83f2078781a3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_DiagnosticPaddleMotors
VAR
    fbDPX_Motor : FB_MotionStage;
    fbDPY_Motor : FB_MotionStage;
    fbDPZ_Motor : FB_MotionStage;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbDPX_Motor(stMotionStage:=Main.stDPXMotor);

fbDPY_Motor(stMotionStage:=Main.stDPYMotor);

fbDPZ_Motor(stMotionStage:=Main.stDPZMotor);


]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>